# aoc2024polars

./: README.md  aoc24.py  pyproject.toml
aoc/: aoc24.py
day1/: day1.py
day2/: day2.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
